--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "node index.js"
+    "start": "vite preview"
+
   },
   "dependencies": {
     "date-fns": "^2.30.0",
