--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "version": 2,
-  "builds": [
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/next"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  ],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "http://0.0.0.0:3000"
-  }
+  ]
 }
